Fixed BG contrast on evidence preview

--- a/public_html/css/compiled/app.css
+++ b/public_html/css/compiled/app.css
@@ -6001,7 +6001,7 @@ nav {
 
 ============================================================================= */
 .applicant-evidence-preview {
-  background: #e2e2e2;
+  background: #fbfbfb;
   margin: 0 0 4rem 0;
   padding: 3rem 0; }
   @media (min-width: 64em) {
