--- a/public_html/scss/molecules/user-application-evidence-preview.scss
+++ b/public_html/scss/molecules/user-application-evidence-preview.scss
@@ -7,7 +7,7 @@
 ============================================================================= */
 
 .applicant-evidence-preview {
-	background: lighten($palette-grey--light, 10%);
+	background: lighten($palette-grey--light, 20%);
 	margin: 0 0 4rem 0;
 	padding: 3rem 0;
 
@@ -354,7 +354,7 @@
 
 .attestation{
     margin-top:1em;
-    
+
     label{
         font-weight:100;
     }
